--- a/css/style.css
+++ b/css/style.css
@@ -532,7 +532,8 @@ body {
 }
 
 .weather__deck .description .now .like.active {
-    background: url('../img/heart-ico.svg')
+    background: url('../img/heart-ico.svg')no-repeat;
+    background-size: contain;
 }
 
 .weather__deck .description .forecast img {
@@ -574,6 +575,7 @@ body {
     padding-left: 17px;
     padding-bottom: 7px;
     font-size: 24px;
+    line-height: 28px;
     border-right: none;
     box-sizing: border-box;
     display: flex;
@@ -586,15 +588,18 @@ body {
     padding-top: 35px;
     padding-left: 18px;
     font-size: 24px;
-    line-height: 28px;
 }
 
-.weather__deck .favourite li, .weather__deck .details li{
+.weather__deck .favourite li, .weather__deck .details .city{
     margin-bottom: 10px;
 }
 
-.weather__deck .favourite li:last-child, .weather__deck .details li:last-child {
+.weather__deck .favourite li:last-child, .weather__deck .details .city:last-child {
     margin: 0;
+}
+
+.weather__deck .favourite li, .weather__deck .details .city button {
+    
 }
 
 /*----------------------------------------------------------------
